// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Custom/Providers Simple 1`] = `
<storybook-wrapper>
  <storybook-simple-service-component
    ng-reflect-name="Static name"
  >
    <p>
      Static name:
    </p>
    <ul>
      
    </ul>
  </storybook-simple-service-component>
</storybook-wrapper>
`;

exports[`Storyshots Custom/Providers With knobs 1`] = `
<storybook-wrapper>
  <storybook-simple-service-component
    ng-reflect-name="Dynamic knob"
  >
    <p>
      Dynamic knob:
    </p>
    <ul>
      
    </ul>
  </storybook-simple-service-component>
</storybook-wrapper>
`;
